# python-web-examples

./: README.md
bottle-app/: README.md  app.py  run.py
bottle-app/views/: index.html
bottle-html/: README.md
bottle-html/static/css/: style.css
bottle-mysql/: .editorconfig  LICENSE  README.md  docker-compose.yaml  requirements.txt
bottle-mysql/app/: db.py  main.py
bottle-mysql/compose/: Dockerfile  entrypoint.sh
bottle-mysql/views/: home.tpl
bottle-postgres/: README.md  docker-compose.yaml  requirements.txt
bottle-postgres/app/: db.py  main.py
bottle-postgres/compose/: Dockerfile  entrypoint.sh
bottle-postgres/views/: base.tpl  home.tpl
bottle/src/: app.py
bottle/src/routes/: home.py
bottle/src/views/: index.html
cherrypy-bootstrap/: .gitignore  README.md  entrypoint.sh  pyproject.toml
cherrypy-bootstrap/src/cherrypy_bootstrap/: __init__.py  app.py  config.py  entrypoint.sh  main.py  utilities.py
cherrypy-bootstrap/src/cherrypy_bootstrap/application/: controllers.py
cherrypy-bootstrap/src/cherrypy_bootstrap/config/: base.py  development.py  production.py
cherrypy-bootstrap/src/cherrypy_bootstrap/myapp/: controllers.py
cherrypy-bootstrap/src/cherrypy_bootstrap/templates/: base.html  error.html  index.html
django-celery/: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt  startflower.sh  startworker.sh
django-celery/app/: tasks.py  urls.py  views.py
django-celery/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django-celery/templates/: index.html
django-comments/: .gitignore  README.md  manage.py  requirements.txt
django-comments/articles/: admin.py  models.py  views.py
django-comments/articles/migrations/: 0001_initial.py
django-comments/articles/templates/: base.html  index.html
django-comments/comments/: admin.py  forms.py  models.py
django-comments/comments/migrations/: 0001_initial.py
django-comments/config/: asgi.py  settings.py  urls.py  wsgi.py
django-comments/djangoconfig/: asgi.py  settings.py  urls.py  wsgi.py
django-mysql/: README.md  docker-compose.yaml  manage.py  requirements.txt  setup.py
django-mysql/apps/: asgi.py  wsgi.py
django-mysql/apps/client/: apps.py  urls.py
django-mysql/compose/: Dockerfile  entrypoint.sh
django-mysql/settings/: common.py
django-mysql/templates/: 404.html
django-postgres/: .dockerignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  requirements.txt  setup.py
django-postgres/apps/: urls.py
django-postgres/compose/: Dockerfile  entrypoint.sh
django-postgres/settings/: common.py  develop.py  production.py
django-postgres/templates/: base.html
django-reactflow/: .env.example  .gitignore  README.md  diagram.html  manage.py  pyproject.toml
django-reactflow/djflow/: asgi.py  urls.py  wsgi.py
django-reactflow/djflow/diagram/: apps.py  views.py
django-reactflow/djflow/home/: apps.py  views.py
django-reactflow/reactflow/: package-lock.json  package.json  webpack.config.js
django-tailwind/: README.md  manage.py  package-lock.json  tailwind.config.js
django-tailwind/djangotailwind/: asgi.py  settings.py  urls.py  wsgi.py
django-tailwind/templates/: base.html
fastapi-api/: README.md  pyproject.toml
fastapi-api/src/: app.py  routes.py
fastapi-api/src/config/: __init__.py  logging.py  settings.py
fastapi-mongo/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  wait-for-mongo.sh
fastapi-mongo/src/: app.py  models.py  routes.py
fastapi-mongo/src/config/: settings.py
flask-mysql/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  initdb.sql  requirements.txt  run.py
flask-mysql/app/: __init__.py
flask-postgres/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  run.py
flask-postgres/app/: config.py  main.py
flask-postgres/code/: Dockerfile  __init__.py  app.py  config.py  entrypoint.sh  manage.py  requirements.txt  run.py
flask-postgres/postgres/: Dockerfile  create.sql
flask-postgres/src/: Dockerfile  app.py  entrypoint.sh
pyramid-app/: .coveragerc  MANIFEST.in  README.md  development.ini  production.ini  pytest.ini  setup.py  testing.ini
pyramid-app/pyramid_app/: routes.py
pyramid-app/tests/: conftest.py  test_views.py
pyramid-html/: .coveragerc  MANIFEST.in  README.md  development.ini  production.ini  pytest.ini  setup.py  testing.ini
pyramid-html/tests/: conftest.py  test_views.py
quart-api/: README.md  main.py  pyproject.toml
quart-api/api/: app.py  config.py  models.py  routes.py
quart-app/: .editorconfig  README.md  requirements.txt
quart-app/app/: __init__.py  app.py  routes.py
quart-chat/: README.md  main.py
quart-chat/chat/: app.py  routes.py
quart-html/: README.md  main.py  pyproject.toml  run.py
quart-html/app/: config.py  main.py
quart-html/app/templates/: base.html  index.html
quart-websocket/: README.md  pyproject.toml
quart-websocket/chat/templates/: base.html
sanic-api/: README.md  pyproject.toml  run.py
sanic-api/app/: __init__.py  routes.py  views.py
sanic-api/app/blueprints/: __init__.py  auth.py  hello.py
sanic-api/app/config/: __init__.py  base.py  development.py  production.py
streamlit-app/: README.md  pyproject.toml
streamlit-app/src/streamlit_app/: main.py
streamlit-app/src/streamlit_app/pages/: mapping.py  plotting.py
streamlit-langchain/: README.md  pyproject.toml
streamlit-langchain/src/streamlit_langchain/: main.py
streamlit-llm-chat/: README.md  pyproject.toml
streamlit-llm-chat/src/streamlit_llm_chat/: main.py
streamlit-openai/: README.md  pyproject.toml
streamlit-openai/src/streamlit_openai/: main.py
web2py-app/: .gitignore  README.md  pyproject.toml
(+39 files in other folders)
