[tool.poetry]
name = "cherrypy-bootstrap"
version = "0.1.0"
description = ""
authors = ["jgujerry <username@unknown.com>"]
readme = "README.md"
packages = [{include = "cherrypy_bootstrap", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
cherrypy = "^18.9.0"
jinja2 = "^3.1.3"
cherrypy-jinja2 = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
