[tool.poetry]
name = "quart-html"
version = "0.1.0"
description = ""
authors = ["jgujerry <test@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
