[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["jgujerry <jgu@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
