[tool.poetry]
name = "streamlit-llm-chat"
version = "0.1.0"
description = ""
authors = ["jgujerry <jianligu3@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_llm_chat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
